# CoverFlowMP

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  main.cpp  packaging.md  resources.qrc  setup.md
debian/: README  README.Debian  README.source  changelog  control  copyright  coverflowmp.cron.d.ex  coverflowmp.doc-base.ex  coverflowmp.substvars  debhelper-build-stamp  files  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex
debian/.debhelper/coverflowmp/: dbgsym-build-ids
debian/.debhelper/coverflowmp/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/coverflowmp/dbgsym-root/usr/share/doc/: coverflowmp-dbgsym
debian/coverflowmp/DEBIAN/: control  md5sums
obj-x86_64-linux-gnu/: CMakeCache.txt  CoverFlowMPApp  Makefile  cmake_install.cmake  install_manifest.txt
obj-x86_64-linux-gnu/.qt/: QtDeploySupport.cmake
obj-x86_64-linux-gnu/.qt/deploy_qml_imports/: CoverFlowMPApp.cmake
obj-x86_64-linux-gnu/.qt_plugins/: Qt6_QmlPlugins_Imports_CoverFlowMPApp.cmake  Qt6_QmlPlugins_Imports_CoverFlowMPApp.rsp
obj-x86_64-linux-gnu/CoverFlowMPApp_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
obj-x86_64-linux-gnu/CoverFlowMPApp_autogen/43FNQ76O6F/: moc_ResumeRepository.cpp  moc_ResumeRepository.cpp.d
obj-x86_64-linux-gnu/CoverFlowMPApp_autogen/6IR33JEFVF/: moc_MpvObject.cpp  moc_MpvObject.cpp.d  moc_PlayerController.cpp  moc_PlayerController.cpp.d
obj-x86_64-linux-gnu/CoverFlowMPApp_autogen/EWIEGA46WW/: qrc_resources.cpp
obj-x86_64-linux-gnu/CoverFlowMPApp_autogen/ISMKEKEPX5/: moc_AppController.cpp  moc_AppController.cpp.d
obj-x86_64-linux-gnu/CoverFlowMPApp_autogen/SVT5AJZPWX/: moc_LibraryScanner.cpp  moc_LibraryScanner.cpp.d  moc_ThumbnailService.cpp  moc_ThumbnailService.cpp.d  moc_VideoLibraryModel.cpp  moc_VideoLibraryModel.cpp.d
packaging/: coverflowmp-configurator.desktop  coverflowmp.desktop
qml/: BrowserScreen.qml  CoverFlowView.qml  Main.qml  PauseOverlay.qml  PlayerScreen.qml
qml/app/: Main.qml
qml/configurator/: Main.qml
src/app/: AppController.cpp  AppController.h  main.cpp
src/configurator/: ConfiguratorController.cpp  ConfiguratorController.h  main.cpp
src/media/: LibraryScanner.cpp  LibraryScanner.h  ThumbnailService.cpp  ThumbnailService.h  VideoItem.h  VideoLibraryModel.cpp  VideoLibraryModel.h
src/persistence/: ResumeRepository.cpp  ResumeRepository.h
src/platform/: SessionInhibitor.cpp  SessionInhibitor.h
src/player/: MpvObject.cpp  MpvObject.h  PlayerController.cpp  PlayerController.h  SkipRange.h
src/shared/: AppConfig.cpp  AppConfig.h  AppDatabase.cpp  AppDatabase.h  AppLaunchGuard.cpp  AppLaunchGuard.h  AppPaths.cpp  AppPaths.h
